# api/api.go
@@ -19,8 +19,6 @@ func Setup(ctx context.Context, r *mux.Router, dataStore DataStore) *API {
 		dataStore: dataStore,
 	}
 
-	// TODO: remove hello world example handler route
-	r.HandleFunc("/hello", HelloHandler(ctx)).Methods("GET")
 	r.HandleFunc("/mongocheck", api.AddDataSets(ctx)).Methods("POST")
 	r.HandleFunc("/mongocheck", api.GetDataSets(ctx)).Methods("GET")
 	return api
