# api/data.go
@@ -33,12 +33,12 @@ func (api *API) GetDataSets(ctx context.Context) http.HandlerFunc {
 
 // AddDataSets stores a message in the datastore
 func (api *API) AddDataSets(ctx context.Context) http.HandlerFunc {
-	log.Info(ctx, "api contains example endpoint, remove hello.go as soon as possible")
+	log.Info(ctx, "calling add datsets handler")
 
 	return func(w http.ResponseWriter, req *http.Request) {
 		// Deconstruct json into our models.DataMessage struct
-		var input models.DataMessage
-		err := json.NewDecoder(req.Body).Decode(&input)
+		var docToInsert models.DataMessage
+		err := json.NewDecoder(req.Body).Decode(&docToInsert)
 
 		if err != nil {
 			log.Error(ctx, "error decoding request body", err)
@@ -46,9 +46,9 @@ func (api *API) AddDataSets(ctx context.Context) http.HandlerFunc {
 			return
 		}
 
-		log.Info(ctx, "received data", log.Data{"input:": input})
+		log.Info(ctx, "received data", log.Data{"doc to insert:": docToInsert})
 
-		err = api.dataStore.AddDataSet(ctx, input)
+		err = api.dataStore.AddDataSet(ctx, docToInsert)
 		if err != nil {
 			log.Error(ctx, "failed to insert document", err)
 			return
@@ -59,7 +59,7 @@ func (api *API) AddDataSets(ctx context.Context) http.HandlerFunc {
 		// Respond with the inserted document and StatusCreated
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(http.StatusCreated)
-		err = json.NewEncoder(w).Encode(input)
+		err = json.NewEncoder(w).Encode(docToInsert)
 		if err != nil {
 			log.Error(ctx, "error encoding results to JSON", err)
 			http.Error(w, "Internal Server Error", http.StatusInternalServerError)
