# api/hello.go
@@ -1,43 +1,0 @@
-package api
-
-import (
-	"context"
-	"encoding/json"
-	"net/http"
-
-	"github.com/ONSdigital/log.go/v2/log"
-)
-
-// TODO: remove hello world handler
-const helloMessage = "Hello, World!"
-
-type HelloResponse struct {
-	Message string `json:"message,omitempty"`
-}
-
-// HelloHandler returns the handler for endpoint hello
-func HelloHandler(ctx context.Context) http.HandlerFunc {
-	log.Info(ctx, "api contains example endpoint, remove hello.go as soon as possible")
-	return func(w http.ResponseWriter, req *http.Request) {
-		ctx := req.Context()
-
-		response := HelloResponse{
-			Message: helloMessage,
-		}
-
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		jsonResponse, err := json.Marshal(response)
-		if err != nil {
-			log.Error(ctx, "marshalling response failed", err)
-			http.Error(w, "Failed to marshall json response", http.StatusInternalServerError)
-			return
-		}
-
-		_, err = w.Write(jsonResponse)
-		if err != nil {
-			log.Error(ctx, "writing response failed", err)
-			http.Error(w, "Failed to write http response", http.StatusInternalServerError)
-			return
-		}
-	}
-}
